--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	  <meta name="robots" content="noindex,nofollow">
-      <title>Shortly - Free HTML Coming Soon Page</title>
+      <title>The 21st CLC</title>
 	  <meta name="description" content="">
       <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,500,600,700,700i,800,800i,900,900i" rel="stylesheet">
       <link href="assets/css/style.css" rel="stylesheet">
